--- a/index.css
+++ b/index.css
@@ -92,10 +92,19 @@ align-content: 20px;
     border-radius: 30px 30px 30px 30px;
     border: transparent;
     height:5vh;
+    transform: scale(1);
+    font-size: 20px;
+    white-space: inherit;
 }
 .footer{
     display: flex;
 }
 .icon{
+    display: inline;
     float: left;
 }
+/* .salad{
+    display: flex;
+    float: right;
+    direction: left;
+}  */
