--- a/index.css
+++ b/index.css
@@ -71,34 +71,14 @@ width: 60px;
     flex-wrap: wrap;
     justify-content: space-around;
     padding: 70px;
-    padding-top: 12px;
+    padding-top: 5px;
 }
 .explore{
     background-color: #c2cabc;
     text-align: center;
-    margin-top: 15px;
+    margin-top: 50px;
 }
-.mon p, .tue p, .wed p, .thu p, .thu p, .fri p .sat p{
-    margin-left: 70px;
-    text-align: center;
-}
-.image{
-    height: 120px;
-    float: left; 
-    margin-top: 100px;
-}
-.mill.mon, .tue, .wed{
-    height: 128px;
-    width: 214px;
-    margin:  40px;
-    border-bottom-right-radius: 50px;
-    background-color: white;
-    padding: 15px;
-    margin-bottom: -98px;
-    margin-right: -7px;
-    
-}
-.mill.thu, .fri, .sat{
+.mill .mon ,.tue, .wed, .thu, .fri, .sat{
     height: 128px;
     width: 215px;
     margin:  40px;
@@ -108,6 +88,10 @@ width: 60px;
     margin-bottom: -100px;
     margin-right: -8px;
     
+}
+.image{
+    float: left;
+margin-top: 75.5px;
 }
 
 .hot{
