--- a/index.css
+++ b/index.css
@@ -48,9 +48,10 @@ width: 60px;
     color:#EAAB1B ;
 }
 .pg{
-    padding: 10x 10px 10px 10px;
+    /* padding: 10x 10px 10px 10px; */
     margin-left: 400px;
     margin: top;
+    padding-top: 0%;
 }
 .menu{
     display: flex;
