--- a/index.css
+++ b/index.css
@@ -47,12 +47,12 @@ width: 60px;
 .tog{
     color:#EAAB1B ;
 }
-.pg{
+/* .pg{
     /* padding: 10x 10px 10px 10px; */
     margin-left: 400px;
     margin: top;
     padding-top: 0%;
-}
+} */
 .menu{
     display: flex;
     text-align: center;
